--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,21 @@
     box-sizing: border-box;
 }
 
+/* UTILITY */
+
 .debug{
     border: 1px solid black;
     background-color: rgba(255, 0, 0, .5);
 }
 
 /* GENERALI */
+body{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+a{
+    text-decoration: none;
+}
 
 .container{
     width: 90%;
@@ -26,12 +35,22 @@ header{
     background-color: #3161E0;
 }
 
+.button{
+    width: 72px;
+    height: 35px;
+    padding: 5px;
+    text-align: center;
+
+    background-color: white;
+    border: 1px solid white;
+    border-radius: 17px 17px 17px 17px;
+}
+/* HEADER */
+
 header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* COLOR DI DEBUG */
-    background-color: red;
 }
 
 ul{
@@ -40,18 +59,12 @@ ul{
 }
 ul li{
     list-style: none;
+    margin: 35px;
     
 }
 ul li a{
     text-decoration: none;
-}
-
-.button{
-    width: 70px;
-    height: 35px;
-    padding: 5px;
-    text-align: center;
-    background-color: white;
+    color: white;
 }
 
 
@@ -60,7 +73,10 @@ ul li a{
     justify-content: center;
     align-items: center;
     height: 550px;
-    background-color: greenyellow;
+
+    background-image: url(/assets/img/jumbo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
