--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    /* outline: 2px solid red; */
+
 }
 
 /* UTILITY */
@@ -13,7 +16,7 @@
 
 /* GENERALI */
 body{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a{
@@ -103,7 +106,7 @@ ul li a{
 .jumbo-content div.cta-box{
     display: flex;
     padding: 10px;
-    margin-top: 20px;
+    margin: 30px 0px;
 }
 
 .cta-box .button.cta-white{
@@ -134,31 +137,45 @@ ul li a{
 
 /* MAIN */
 section.bg-grey{
+    padding:20px;
     background-color: #F6F6F6;
 }
 section .container{
     display: flex;
-
-    /* COLOR DI DEBUG */
-    min-height: 500px;
-    background-color: #F4F3F6;
+    padding: 20px;
+    margin-bottom: 100px;
 }
 
 section .container .img{
     width: 60%;
 
     /* DEBUG */
-    min-height: 300px;
-    background-color: aqua;
+    /* min-height: 300px;
+    background-color: aqua; */
 }
 section .container .text{
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+
+
     width: 40%;
 
     /* DEBUG */
-    min-height: 500px;
-    background-color: aquamarine;
+    /* min-height: 500px;
+    background-color: aquamarine; */
 }
-
+section .container .text h2{
+    font-size: 2.5rem;
+    text-align: left;
+}
+section .container .text p{
+    padding-top: 15px;
+    font-size: 1.2rem;
+    text-align: left;
+}
 section.section-bot .container{
     flex-direction: column;
     justify-content: space-around;
