--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,16 @@ a{
     text-decoration: none;
 }
 
+/* .waves{
+    display: block;
+    height: 52px;
+    background-image: url(/assets/img/wave.svg);
+    background-repeat: repeat-x;
+    background-size: contain;
+    background-position: center;
+    
+} */
+
 .container{
     width: 90%;
     max-width: 1200px;
@@ -35,7 +45,7 @@ header{
     width: 100%;
     height: 80px;
 
-    background-color: #3161E0;
+    background-color: #255EE9;
 }
 
 .button{
