--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+img{
+    max-width: 100%;
+}
+
 a{
     text-decoration: none;
 }
@@ -49,12 +53,12 @@ header{
 }
 
 .button{
-    padding: 10px;
+    padding: 10px 20px;
     text-align: center;
     font-size: 1.2rem;
     background-color: white;
     border: 1px solid white;
-    border-radius: 31px 31px 31px 31px;
+    border-radius: 40px;
 }
 /* HEADER */
 
@@ -84,6 +88,10 @@ header ul li a{
     color: white;
 }
 
+header .button.login{
+    font-size: .9rem;
+}
+
 /* JUMBOTRON */
 .jumbotron{
     display: flex;
@@ -91,13 +99,14 @@ header ul li a{
     align-items: center;
     height: 550px;
 
-    background-image: url(/assets/img/jumbo.png);
-    background-repeat: no-repeat;
+    background-image: url("/assets/img/jumbo.png");
     background-size: cover;
-
+    background-position: center;
 }
 
 .jumbotron .jumbo-content{
+    width: 90%;
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -118,7 +127,7 @@ header ul li a{
 
 .jumbotron .jumbo-content p{
     color: white;
-
+    line-height: 30px;
     font-size: 1.2rem;
 }
 
@@ -252,6 +261,7 @@ h3{
 footer{
     /* display: flex;
     justify-content: space-evenly; */
+    padding-top: 120px;
     width: 100%;
     background-color: #24272A;
 
@@ -259,6 +269,7 @@ footer{
 
 .footer-top{
     display: flex;
+    padding-bottom: 30px;
     border-bottom: 1px solid #7289DA;
 
 }
@@ -273,19 +284,24 @@ footer{
 } 
 
 .footer-top .col-social h3{
+    margin-bottom: 30px;
     font-size: 2.3rem;
     color: #7289DA;
 } 
 
 .footer-top .col-menu{
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
     width: calc(100% / 6);
     padding: 15px;
     margin-top: 10px;
 
 }
-
+.footer-top .col-menu h4{
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #7289DA;
+}
 footer span.language a{
     color: white;
 }
@@ -315,8 +331,7 @@ i.fa-brands{
 
 footer ul{
     list-style: none;
-    display: flex;
-    flex-direction: column;
+    padding-bottom: 15px;
     
 }
 
@@ -339,7 +354,8 @@ footer ul li a{
     justify-content: space-between;
     align-items: center;
 
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 70px;
     margin-top: 10px;  
 }
 
